# study

Y1/C++/: Test.cpp  Test1.cpp
Y1/C++/lab2/lab/2/: 2.1.cpp  2.3.cpp  2.3out.html  2.4.cpp  CMakeLists.txt  out2.html  test.cpp
Y1/C++/lab2/lab/3/: 3.cpp  CMakeLists.txt  circle.html
Y1/C++/miniproject/: data.txt  main.cpp  output.html  print_format_html.hpp  test.cpp
Y1/Python/: Tewst3.py  asd.py  asdasd1.py  asdsad.py  test.py  test1.py  test2.py
Y1/Python/Project/: Beta.py  Test.py  Test1.py  Test2.py  Test3.py  Test5.py  test4.py
Y1/Python/import/: module.py  t.py
Y1/Python/lab2/: HW1.py  HW2.py  Test
Y1/Python/lab3/: HW1.py  HW2.py  HW3.py  HW4.py  HW5.py
Y1/Python/lab8/: test1.py
Y2/ADA/: Booth_rental.py  Cutting Stick.py  Double, Triple, and Increment.py  EV Charger.py  Longest Increasing Subsequence.py  Optimal Interest Rate.py  Solving an inequality.py  Two items.py  binary.py  coin change.py  hello.py  number_picking.py  quick select.py  sorting.py  subset.py  test.py
Y2/ADA/Lab1/: 1.py  2.py  3.py
Y2/Java/Lab11/: L11_GraphRep_Main.java  L11_tester.java  test.java
Y2/Java/Lab5/: L5_RPN_Main.java
Y2/Java/Lab6/: L6_Infix_Main.java
Y2/Java/Lab7/: L7_MinCoin_Main.java  Tester.java
Y2/Java/Lab8/: L8_PQ_Main.java  L8_b.java  (+1 more)
Y2/R/: 10.r  11.r  12.r  2.r  3.r  4.r  6.r  7.1.r  7.r  8.r  9.r
Y2/linear al/: Elim mat.py  HW.py  test.py
Y3/prolog/: L2_P1.pro  L2_P2.pro  L2_P3.pro  L2_P4.pro  L3_P1_1.pro  L3_P1_2.pro  L3_P2.pro  L3_P3_1.pro  L3_P3_2.py  L4_P4_1.pro  L4_P4_2.py  registration.pro  test.pro
kattis/: 99porb.py  towering.py
(+838 files in other folders)
